rm #3470 default forbidden cannot be selected